--- a/main.html
+++ b/main.html
@@ -20,7 +20,6 @@
     <script src="jquery/jquery-ui.min.js"></script>
     <script src="jquery/datepicker-ko.js"></script>
   
-  
     <title>보험친구들</title>
 </head>
 
@@ -90,8 +89,8 @@
         <footer></footer>
     </div>
     <script src='js/common.js'></script>
-    <!-- <script src="js/layout.min.js"></script> -->
-    <script src="js/layout.js"></script>
+    <script src="js/layout.min.js"></script>
+    <!-- <script src="js/layout.js"></script> -->
     <script src="js/animation.js"></script>
     <script>
         layoutRender.HeaderRender();
