--- a/mo_index.html
+++ b/mo_index.html
@@ -6,27 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='description' contnet="보험,유전자,암,치매,2대질병,태아보험">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-  
     <meta property="og:url" content="http://bmcompany.kr">
     <meta property="og:type" content="website">
     <meta property="og:description" content="당신의 삶을 더욱 든든하게">
     <meta property="og:title" content="BM Company">
     <meta property="og:image" content="http://bmcompany.kr/og.jpg">
-    <link rel="shortcut icon" href="http://bmcompany.kr/favicon.ico">
     <link rel="icon" href="http://bmcompany.kr/favicon.ico">
-    <script src='js/common.js'></script>
-    <script src="js/animation.js"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <script type="text/javascript" src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
-    <script src="js/jquery.touchSwipe.min.js"></script>
-    <script src='js/swipe_main.js'></script>
-    <!-- <script src="js/layout.min.js"></script> -->
-    <script src="js/layout.js"></script>
+    <link rel="shortcut icon" href="http://bmcompany.kr/favicon.ico">
+    <!-- favicon.ico -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <link rel="stylesheet" href="jquery/jquery-ui.min.css">
+    <!-- jquery CSS CDN -->
     <link rel="stylesheet" href="css/mo_common.css">
     <link rel="stylesheet" href="css/mo_style.css">
     <link rel="stylesheet" href="css/mo_popup.css">
+    <!-- customcss -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="jquery/jquery-ui.min.js"></script>
+    <!-- jquery script CDN -->
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <!-- jquery bxslider CDN -->
+    <script src="js/jquery.touchSwipe.min.js"></script>
+    <script src='js/swipe_main.js'></script>
+    <!-- jquery swipe event CDN -->
+    <script src="jquery/datepicker-ko.js"></script>
+    <!-- jquery datepicker CDN -->
+
+    <script src='js/common.js'></script>
+    <script src="js/animation.js"></script>
+    <script src="js/layout.js"></script>
+    <!-- <script src="js/layout.min.js"></script> -->
+    <!-- custom script -->
 
     <script>
         $(window).on('load', function () {
@@ -101,7 +111,6 @@
     </script>
     <title>보험친구들</title>
 </head>
-
 <body>
     <div id='wrap'>
             <div class='mo_nav' id='mo_nav_box'>
