--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <script src="jquery/datepicker-ko.js"></script>
     <!-- jquery datepicker CDN -->
     <script src='js/common.js'></script>
-    <script src="js/layout.min.js"></script>
+    <script src="js/layout.js"></script>
+    <!-- <script src="js/layout.min.js"></script> -->
     <script src="js/animation.js"></script>
     <!-- custom script -->
 
