--- a/bm_main_re/index.html
+++ b/bm_main_re/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,12 @@
     <link rel="stylesheet" href="css/default.css">
     <title>Document</title>
 </head>
+
 <body>
     <div id="wrap">
         <header>
-                <div class="head">
-                    <div class="wrap">
+            <div class="head">
+                <div class="wrap">
                     <h1><img src="image/logo.png" alt=""></h1>
                     <div class='head_caption'>
                         <ul>
@@ -42,68 +44,68 @@
                         </ul>
                         <div class="line"></div>
                         <img src="image/head-tel.png" alt="">
-                        </div>
                     </div>
                 </div>
+            </div>
 
 
 
 
-                <div class="gnb">
-                    <div class="wrap">
-                        <ul>
-                            <li>
-                                <a href="">
-                                    <img src="image/gnb-1.png" alt="" class="beactive">
-                                    <img src="image/active-gnb-1.png" alt="" class="active">
-                                    <span>어린이보험</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/gnb-2.png" alt="" class="beactive">
-                                    <img src="image/active-gnb-2.png" alt="" class="active">
-                                    <span>암보험</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/gnb-3.png" alt="" class="beactive">
-                                    <img src="image/active-gnb-3.png" alt="" class="active">
-                                    <span>2대중대질병</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/gnb-4.png" alt="" class="beactive">
-                                    <img src="image/active-gnb-4.png" alt="" class="active">
-                                    <span>치매보험</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/gnb-5.png" alt="" class="beactive">
-                                    <img src="image/active-gnb-5.png" alt="" class="active">
-                                    <span>고객센터</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/gnb-6.png" alt="" class="beactive">
-                                    <img src="image/active-gnb-6.png" alt="" class="active">
-                                    <span>보험금 청구</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/gnb-7.png" alt="" class="beactive">
-                                    <img src="image/active-gnb-7.png" alt="" class="active">
-                                    <span>보험가입</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="gnb">
+                <div class="wrap">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-1.png" alt="" class="beactive">
+                                <img src="image/active-gnb-1.png" alt="" class="active">
+                                <span>어린이보험</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-2.png" alt="" class="beactive">
+                                <img src="image/active-gnb-2.png" alt="" class="active">
+                                <span>암보험</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-3.png" alt="" class="beactive">
+                                <img src="image/active-gnb-3.png" alt="" class="active">
+                                <span>2대중대질병</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-4.png" alt="" class="beactive">
+                                <img src="image/active-gnb-4.png" alt="" class="active">
+                                <span>치매보험</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-5.png" alt="" class="beactive">
+                                <img src="image/active-gnb-5.png" alt="" class="active">
+                                <span>고객센터</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-6.png" alt="" class="beactive">
+                                <img src="image/active-gnb-6.png" alt="" class="active">
+                                <span>보험금 청구</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-7.png" alt="" class="beactive">
+                                <img src="image/active-gnb-7.png" alt="" class="active">
+                                <span>보험가입</span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
+            </div>
         </header>
         <section class="main con1 slider">
 
@@ -157,6 +159,58 @@
                 </div>
             </div>
         </section>
+
+        <section class="main con5">
+            <div class="wrap">
+                <h4>당신의 보험은 어떻습니까?</h4>
+                <p><img src="image/main-secion5-obj-1.png" class='left obj' alt="">
+                    부족한 보장은 채우고 보험료는</p></br>
+                <p><span>15~20% 이상 줄여드립니다.</span>
+                    <img src="image/main-secion5-obj-2.png" class='right obj' alt="">
+                </p>
+
+                <div class='forms'>
+                    <ul>
+                        <li>
+                            <input type="text" placeholder="이름">
+                        </li>
+                        <li>
+                            <select name="" id="">
+                                <option value="">성별</option>
+                                <option value="">남성</option>
+                                <option value="">여성</option>
+                            </select>
+                        </li>
+
+                        <li>
+                            <input type="text" placeholder="생년월일(예:850505)">
+                        </li>
+
+                        <li>
+                            <input type="text" placeholder="휴대폰번호">
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="checkbox">
+                    <input type="checkbox" id="checkbox_2" value="" />
+                    <label for="checkbox_2">개인정보수집 및 이용에 동의합니다.</label>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="main con6">
+            <div class="wrap">
+                <h4>오래도록 묵혀만 두었던 <span>당신의 보험을 꺼내세요!</span></h4>
+                <p>32개 보험사의 모든 상품을 전격 비교분석하는 1:1 맞춤 보장분석서비스 <b>보험친구들</b></p>
+            </div>
+
+        </section>
+
+
     </div>
 </body>
+
 </html>
