--- a/bm_main_re/index.html
+++ b/bm_main_re/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/element.css">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/responsive.css">
+
     <title>Document</title>
 </head>
 
@@ -15,7 +17,7 @@
             <div class="head">
                 <div class="wrap">
                     <h1><img src="image/logo.png" alt=""></h1>
-                    <div class='head_caption'>
+                    <div class='head_caption pc'>
                         <ul>
                             <li>
                                 <a href=''>
@@ -45,11 +47,13 @@
                         <div class="line"></div>
                         <img src="image/head-tel.png" alt="">
                     </div>
+                    <div class='mo ham_btn'>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                 </div>
             </div>
-
-
-
 
             <div class="gnb">
                 <div class="wrap">
@@ -205,9 +209,106 @@
             <div class="wrap">
                 <h4>오래도록 묵혀만 두었던 <span>당신의 보험을 꺼내세요!</span></h4>
                 <p>32개 보험사의 모든 상품을 전격 비교분석하는 1:1 맞춤 보장분석서비스 <b>보험친구들</b></p>
+                <div class='pc_slider'>
+                    <div class='slider_wrap'>1</div>
+                    <img src="image/main-secion6-obj.png" alt="slider">
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="company_ci">
+                <div class="wrap">
+                    <img src="image/dbf.png" alt="">
+                    <img src="image/mgf.png" alt="">
+                    <img src="image/hdf.png" alt="">
+                    <img src="image/hhf.png" alt="">
+                    <img src="image/hkf.png" alt="">
+                    <img src="image/ltf.png" alt="">
+                    <img src="image/mzf.png" alt="">
+                </div>
             </div>
 
-        </section>
+            <div class="gnb">
+                <div class="wrap">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-1.png" alt="" class="beactive">
+                                <img src="image/active-gnb-1.png" alt="" class="active">
+                                <span>어린이보험</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-2.png" alt="" class="beactive">
+                                <img src="image/active-gnb-2.png" alt="" class="active">
+                                <span>암보험</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-3.png" alt="" class="beactive">
+                                <img src="image/active-gnb-3.png" alt="" class="active">
+                                <span>2대중대질병</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-4.png" alt="" class="beactive">
+                                <img src="image/active-gnb-4.png" alt="" class="active">
+                                <span>치매보험</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-5.png" alt="" class="beactive">
+                                <img src="image/active-gnb-5.png" alt="" class="active">
+                                <span>고객센터</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-6.png" alt="" class="beactive">
+                                <img src="image/active-gnb-6.png" alt="" class="active">
+                                <span>보험금 청구</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="image/gnb-7.png" alt="" class="beactive">
+                                <img src="image/active-gnb-7.png" alt="" class="active">
+                                <span>보험가입</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="foot">
+                <div class="wrap">
+
+                    <div class="ci">
+                        <img src="image/logo.png" alt="">
+                    </div>
+
+                    <div class="company_info">
+                        <ul>
+                            <li><a href="">회사소개</a></li>
+                            <li><a href=""><b>개인정보처리방침</b></a></li>
+                            <li><a href="">이용약관</a></li>
+                            <li><a href="">제휴안내</a></li>
+                            <li><a href="">고객센터</a></li>
+                        </ul>
+                        <address>
+                            보험친구들 | 대표 : 방진수 | 이메일 : bm9351@naver.com | 사업자등록번호 : 612-24-18240</br>
+                            전화 : 02-1670-5208 | 팩스 : 070-4369-1010 | 주소 : 서울시 구로구 디지털로 31길 38-21 이엔씨벤쳐드림타워3차 6층 606호</br>
+                            Copyright © 비엠컴퍼니 All rights reserved.
+                        </address>
+                    </div>
+                </div>
+
+            </div>
+        </footer>
 
 
     </div>
